[package]
name = "polystrike-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
dashmap = "6"
polymarket-client-sdk = { version = "0.3", features = ["ws", "data"] }
alloy = { version = "1", features = ["signers", "signer-local"] }
rust_decimal = "1"
rust_decimal_macros = "1"
anyhow = "1"
rustls = { version = "0.23", features = ["ring"], default-features = false }
axum = "0.7"
tokio-util = "0.7"
statrs = "0.16"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
